--- a/css/legalNotice.css
+++ b/css/legalNotice.css
@@ -13,3 +13,96 @@ h1 {
 .containerTwo {
     margin-top: 100px;
 }
+
+
+@media screen and (max-width: 1500px) {
+    .legalNotice {
+        margin-right: 150px;
+        width: unset;
+
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .legalNotice {
+        padding-left: unset;
+        width: unset;
+        margin-bottom: 100px;
+        width: 80%;
+        margin-top: 30px;
+        margin-right: unset;
+    }
+
+    #sidebar {
+        display: none !important;
+    }
+
+    #header {
+        display: none !important;
+    }
+
+    #mobileHeader {
+        height: 50px !important;
+        width: 80% !important;
+        justify-content: space-between;
+        padding-left: 10% !important;
+        padding-right: 10% !important;
+        display: flex !important;
+        align-items: center !important;
+        background-color: #FFFFFF !important;
+        z-index: 1;
+        box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.26);
+        position: fixed;
+        top: 0 !important;
+        left: 0;
+    }
+
+    #mobileBar {
+        display: flex !important;
+        width: 70% !important;
+        padding-right: 0px !important;
+        justify-content: space-between !important;
+        padding-left: 15% !important;
+        padding-right: 15% !important;
+        position: fixed;
+        left: 0;
+    }
+
+    .headerIcons {
+        display: flex;
+        align-items: center;
+    }
+
+    .headerUser {
+        height: 33px;
+        width: 33px;
+        padding: 1.5px;
+        border-radius: 100%;
+        border: 2px solid #2A3647;
+        margin-left: 15px;
+        cursor: pointer;
+    }
+
+    .headerHelp {
+        height: 20px;
+        width: 20px;
+        cursor: pointer;
+    }
+
+    .joinLogoMobile {
+        width: 30px;
+        height: 32px;
+    }
+
+    .mobileNav {
+        text-decoration: none;
+        color: #CDCDCD;
+    }
+
+}
